ansible/include/k8s/traefik/middleware-redirect.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-permanent
  namespace: kube-system
spec:
  redirectScheme:
    permanent: true
    scheme: https
